--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>The Cyber Kid</title>
     
     <!-- <link rel="icon" type="image/x-icon" href="./images/TheCyberKid.jpg"> -->
-    <link rel="icon" type="image/x-icon" href="images/TheCyberKid.jpg">
+    <link rel="icon" type="image/x-icon" href="images/TheCyberKid.jpg?">
 
 
     <!-- <link rel="icon" type="image/svg+xml" href="C:\Users\pagli\OneDrive\Documents\My Portfolios Templates\The Cyber Kid Portfolio\images\TheCyberKid.jpeg" id="favicon-svg"> -->
