Social Media Link fix

--- a/index.html
+++ b/index.html
@@ -484,12 +484,12 @@
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
-                    <li><a href="https://www.instagram.com/thecyberkid12/" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://twitter.com/TheCyberKid2000" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/cyberkid12/" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://medium.com/@cyber_kid12" title="Medium"><i class="fa fa-medium"></i></a></li>
+                    <li><a href="https://www.instagram.com/thecyberkid12/" title="Instagram" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://twitter.com/TheCyberKid2000" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/cyberkid12/" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://medium.com/@cyber_kid12" title="Medium" target="_blank"><i class="fa fa-medium"></i></a></li>
                     <li><a href="https://github.com/thecyberkid
-                        " title="Github"><i class="fa fa-github"></i></a></li>
+                        " title="Github" target="_blank"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
         </div>
