--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <li><a href="https://www.linkedin.com/in/cyberkid12/" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://medium.com/@cyber_kid12" title="Medium" target="_blank"><i class="fa fa-medium"></i></a></li>
                     <li><a href="https://github.com/thecyberkid" title="Github" target="_blank"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://www.fiverr.com/thecyberkid12" title="Fiverr" target="_blank"><i class="fa fa-fiverr"></i></a></li>
+                    <li><a href="https://www.fiverr.com/thecyberkid12" title="Fiverr" target="_blank"><i class="fa fa-fiverr #10998"></i></a></li>
                 </ul>
             </div>
         </div>
