--- a/index.html
+++ b/index.html
@@ -485,11 +485,12 @@
             <div class="text-right">
                 <ul class="social-icons">
                     <li><a href="https://www.instagram.com/thecyberkid12/" title="Insta" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://twitter.com/TheCyberKid2000" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://twitter.com/TheCyberKid12" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/cyberkid12/" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://medium.com/@cyber_kid12" title="Medium" target="_blank"><i class="fa fa-medium"></i></a></li>
                     <li><a href="https://github.com/thecyberkid" title="Github" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://www.fiverr.com/thecyberkid12" title="Fiverr" target="_blank"><i class="fa fa-globe"></i></a></li>
+                    <li><a href="https://www.facebook.com/thecyberkid2000" title="Facebook" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
                 </ul>
             </div>
         </div>
