--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                                 </div>
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
-                                                        <i class="fa fa-group counter-icon" aria-hidden="true"></i><span class="count-number">3</span> Team Members
+                                                        <i class="fa fa-group counter-icon" aria-hidden="true"></i><span class="count-number">3</span> Teams 
                                                     </div>
                                                 </div>
                                                 <div class="item animate" data-animate="fadeInUp">
