--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                             <div class="input-field">
                                                 <textarea class="form-control" name="message" id="message" required placeholder="Message"></textarea>
                                             </div>
-                                            <button class="btn" type="submit" id="submitBtn">Submit more details</button>
+                                            <button class="btn" type="submit" id="submitBtn">BOOK 1:1 SESSION</button>
                                         </form>
                                         <div id="form-messages" class="mt-3"></div>
                                     </div>
@@ -498,7 +498,7 @@
      <script>
         document.getElementById('submitBtn').addEventListener('click', function() {
           // Replace 'YOUR_GOOGLE_FORM_URL' with the actual URL of your Google Form
-          const googleFormUrl = 'https://forms.gle/JdxeWUwbMKwwf5Sd7';
+          const googleFormUrl = 'https://linktr.ee/thecyberkid';
           window.open(googleFormUrl, '_blank');
         });
         </script>  
