--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                             <div class="input-field">
                                                 <textarea class="form-control" name="message" id="message" required placeholder="Message"></textarea>
                                             </div>
-                                            <button class="btn" type="submit" id="submitBtn">BOOK 1:1 SESSION</button>
+                                            <button class="btn" type="submit" id="submitBtn">BOOK A SESSION</button>
                                         </form>
                                         <div id="form-messages" class="mt-3"></div>
                                     </div>
